# landmark_experiment

./: CMakeLists.txt  README.md  VLM_LANDMARK_GUIDE.md  YOLO11_SEG_GUIDE.md  YOLO_RVIZ_GUIDE.md  color_test.py  package.xml  run_landmark_builder.sh  run_yolo11_seg.sh  run_yolo_with_rviz.sh  rviz2_yolo_config.rviz  test_distance_filter.py  test_min_depth.py  test_size_visualization.py  visibility_test.py
bev/: __init__.py
config/: landmark_builder_qwen.yaml
docs/: QWEN_VLM_SETUP.md
msg/: BevObject.msg  BevObjectArray.msg
scripts/: run_landmark_builder_qwen.sh
src/: d435i2bev.py  d435i_seg.py  d435i_semantic.py  landmarker_graph_builder.py  landmarker_weaver.py
